[gd_scene load_steps=22 format=3 uid="uid://baqs2t4p5a58i"]

[ext_resource type="Script" uid="uid://2h748vxjd2ob" path="res://Building Tools/Character Controllers/3D/FPS/fps_character_controller_extended.gd" id="1_1okdc"]
[ext_resource type="Script" uid="uid://j2wmp2173j1h" path="res://Building Tools/Character Controllers/3D/FPS/FPS_Movement_script.gd" id="1_hgisy"]
[ext_resource type="Theme" uid="uid://cmjnqicbnobds" path="res://Building Tools/Themes/FillerTheme.tres" id="2_qnxyh"]
[ext_resource type="PackedScene" uid="uid://ddjlj2gpevbbb" path="res://Building Tools/HUD Items/Ammo Tracker/ammo_tracker.tscn" id="3_ny2yd"]
[ext_resource type="PackedScene" uid="uid://ggljq5ed622m" path="res://Building Tools/HUD Items/Crosshair/crosshair.tscn" id="4_bd3ad"]
[ext_resource type="PackedScene" uid="uid://cgh22dltjhw5u" path="res://Building Tools/HUD Items/Info Checker/info_checker.tscn" id="5_38ppm"]
[ext_resource type="PackedScene" uid="uid://b7vkxyf0bypq3" path="res://Building Tools/HUD Items/Quest Tracker/quest_tracker.tscn" id="5_e07ye"]
[ext_resource type="PackedScene" uid="uid://cxkssphyydq4j" path="res://Building Tools/HUD Items/Messenger/simple_message_display.tscn" id="6_2ulbw"]
[ext_resource type="PackedScene" uid="uid://bm00ewhu0i4vl" path="res://Building Tools/Properties/Interaction/interaction_ray.tscn" id="6_6sjcx"]
[ext_resource type="PackedScene" uid="uid://b8pmopdg2rid5" path="res://Building Tools/Organizers/Hand/hand.tscn" id="7_mhc5k"]
[ext_resource type="PackedScene" uid="uid://de7t6wqk65bq5" path="res://Building Tools/Props/Handhelds/Tool Frame/Simple Blaster/simple_blaster.tscn" id="8_83wnm"]
[ext_resource type="PackedScene" uid="uid://cg3obfppionlq" path="res://Building Tools/Props/Handhelds/Basic Flashlight/basic_flashlight.tscn" id="10_h0suf"]
[ext_resource type="PackedScene" uid="uid://bgeyfohldmmx2" path="res://Building Tools/Properties/Health/health.tscn" id="11_wxiug"]
[ext_resource type="PackedScene" uid="uid://culx5s7b5r33a" path="res://Building Tools/Properties/Inventories/key_ring.tscn" id="12_lam6a"]
[ext_resource type="PackedScene" uid="uid://dn3punkb35pti" path="res://Building Tools/Organizers/Quests/quest_book.tscn" id="14_n1rao"]
[ext_resource type="Script" uid="uid://cmvtosbnsokx2" path="res://Building Tools/Organizers/Quests/quest.gd" id="16_u5agr"]
[ext_resource type="PackedScene" uid="uid://dfgiml7orhq34" path="res://Building Tools/Organizers/Messages/message_catcher.tscn" id="17_ga32w"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_smuhl"]
radius = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_08tas"]
radius = 0.4

[sub_resource type="Resource" id="Resource_422p3"]
resource_local_to_scene = true
script = ExtResource("16_u5agr")
questName = "Press X"
description = "Press the X key"
summary = "press X"
keyToPress = "X"
killTarget = ""
progressTarget = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q4otr"]

[node name="FPSCharacterControllerExt" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_1okdc")

[node name="MovementControl" type="Node3D" parent="."]
script = ExtResource("1_hgisy")

[node name="PlayerUI" type="CanvasLayer" parent="."]

[node name="healthBar" type="ProgressBar" parent="PlayerUI"]
offset_left = 24.0
offset_top = 21.0
offset_right = 305.0
offset_bottom = 62.0
theme = ExtResource("2_qnxyh")
theme_type_variation = &"HealthBar"
show_percentage = false

[node name="AmmoTracker" parent="PlayerUI" instance=ExtResource("3_ny2yd")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="AmmoContainer" parent="PlayerUI/AmmoTracker" index="0"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -108.0
offset_right = 0.0
grow_horizontal = 0

[node name="Crosshair" parent="PlayerUI" instance=ExtResource("4_bd3ad")]

[node name="info" type="Label" parent="PlayerUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 15.0
offset_right = 20.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="ObjectiveUI" type="VBoxContainer" parent="PlayerUI"]
offset_left = 28.0
offset_top = 72.0
offset_right = 127.0
offset_bottom = 625.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ObjectiveTitle" type="Label" parent="PlayerUI/ObjectiveUI"]
layout_mode = 2
size_flags_vertical = 0
text = "OBJECTIVE
"

[node name="QuestTracker" parent="PlayerUI/ObjectiveUI" node_paths=PackedStringArray("questBook") instance=ExtResource("5_e07ye")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
questBook = NodePath("../../../QuestBook")

[node name="SimpleMessageDisplay" parent="PlayerUI" instance=ExtResource("6_2ulbw")]
offset_left = 158.0
offset_top = 331.0
offset_right = -156.0
offset_bottom = -14.0

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.71, 0)

[node name="PlayerCamera" type="Camera3D" parent="Head"]

[node name="Aim" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.27656)
target_position = Vector3(0, 0, -20)

[node name="InfoChecker" parent="Head" node_paths=PackedStringArray("info") instance=ExtResource("5_38ppm")]
info = NodePath("../../PlayerUI/info")

[node name="InteractionRay" parent="Head" node_paths=PackedStringArray("user") instance=ExtResource("6_6sjcx")]
user = NodePath("../..")

[node name="Hand" parent="Head" node_paths=PackedStringArray("ammoUI", "targettingRay") instance=ExtResource("7_mhc5k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.291575, -0.665785, -0.675044)
ammoUI = NodePath("../../PlayerUI/AmmoTracker")
targettingRay = NodePath("../Aim")

[node name="SimpleBlaster" parent="Head/Hand" instance=ExtResource("8_83wnm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.392744)

[node name="BasicFlashlight" parent="Head" instance=ExtResource("10_h0suf")]

[node name="FPSCharacterMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_smuhl")

[node name="FPSCharacterCollider" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_08tas")

[node name="FloorCheck" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.954661, 0)
target_position = Vector3(0, -0.25, 0)

[node name="Health" parent="." node_paths=PackedStringArray("healthUI", "owningNode") instance=ExtResource("11_wxiug")]
healthUI = NodePath("../PlayerUI/healthBar")
owningNode = NodePath("..")

[node name="KeyRing" parent="." instance=ExtResource("12_lam6a")]

[node name="QuestBook" parent="." node_paths=PackedStringArray("questBookOwner", "simpleTracker") instance=ExtResource("14_n1rao")]
questBookOwner = NodePath("..")
quests = Array[ExtResource("16_u5agr")]([SubResource("Resource_422p3")])
simpleTracker = NodePath("../PlayerUI/ObjectiveUI/QuestTracker")

[node name="MessageCatcher" parent="." instance=ExtResource("17_ga32w")]

[node name="Identifier" type="Area3D" parent="." groups=["player"]]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Identifier"]
shape = SubResource("CapsuleShape3D_q4otr")

[connection signal="newMessage" from="MessageCatcher" to="." method="_on_message_catcher_new_message"]

[editable path="PlayerUI/AmmoTracker"]
[editable path="Head/InfoChecker"]
